CODEGEAR_FILES = \
	codegear/libbfio/libbfio.cbproj \
	codegear/liberror/liberror.cbproj \
	codegear/libnotify/libnotify.cbproj \
	codegear/libsmraw/libsmraw.cbproj \
	codegear/libuna/libuna.cbproj \
	codegear/libsmraw.groupproj

EXTRA_DIST = \
	$(CODEGEAR_FILES)

distclean: clean
	/bin/rm -f Makefile

