CODEGEAR_FILES = \
	codegear/libbfio/libbfio.cbproj \
	codegear/libcstring/libcstring.cbproj \
	codegear/liberror/liberror.cbproj \
	codegear/libnotify/libnotify.cbproj \
	codegear/libsmraw/libsmraw.cbproj \
	codegear/libuna/libuna.cbproj \
	codegear/libsmraw.groupproj

EXTRA_DIST = \
	$(CODEGEAR_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

