include_HEADERS = \
	libsmraw.h

pkginclude_HEADERS = \
	libsmraw/codepage.h \
	libsmraw/definitions.h \
	libsmraw/error.h \
	libsmraw/extern.h \
	libsmraw/features.h \
	libsmraw/types.h

EXTRA_DIST = \
	libsmraw.h.in \
	libsmraw/definitions.h.in \
	libsmraw/features.h.in \
	libsmraw/types.h.in

DISTCLEANFILES = \
	libsmraw.h \
	libsmraw/definitions.h \
	libsmraw/features.h \
	libsmraw/types.h \
	Makefile \
	Makefile.in

