MSVSCPP_FILES = \
	dokan/dokan.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcstring/libcstring.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfvalue/libfvalue.vcproj \
	libhmac/libhmac.vcproj \
	libsmraw/libsmraw.vcproj \
	libuna/libuna.vcproj \
	pysmraw/pysmraw.vcproj \
	smraw.net/smraw.net.vcproj \
	smraw_test_get_version/smraw_test_get_version.vcproj \
	smraw_test_glob/smraw_test_glob.vcproj \
	smraw_test_open_close/smraw_test_open_close.vcproj \
	smraw_test_read/smraw_test_read.vcproj \
	smraw_test_read_loop/smraw_test_read_loop.vcproj \
	smraw_test_seek/smraw_test_seek.vcproj \
	smraw_test_write/smraw_test_write.vcproj \
	smrawmount/smrawmount.vcproj \
	smrawverify/smrawverify.vcproj \
	libsmraw.sln

SCRIPT_FILES = \
	scripts/vs2008_x64.sh \
	scripts/vs2008_x64_sln.sed \
	scripts/vs2008_x64_vcproj.sed \
	scripts/vs2010_x64.sh \
	scripts/vs2010_x64_sln.sed \
	scripts/vs2010_x64_vcxproj.sed

EXTRA_DIST = \
	$(MSVSCPP_FILES) \
	$(SCRIPT_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

