MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfvalue/libfvalue.vcproj \
	libhmac/libhmac.vcproj \
	libsmraw/libsmraw.vcproj \
	libuna/libuna.vcproj \
	pysmraw/pysmraw.vcproj \
	smraw.net/smraw.net.vcproj \
	smraw_test_error/smraw_test_error.vcproj \
	smraw_test_filename/smraw_test_filename.vcproj \
	smraw_test_glob/smraw_test_glob.vcproj \
	smraw_test_handle/smraw_test_handle.vcproj \
	smraw_test_information_file/smraw_test_information_file.vcproj \
	smraw_test_io_handle/smraw_test_io_handle.vcproj \
	smraw_test_notify/smraw_test_notify.vcproj \
	smraw_test_support/smraw_test_support.vcproj \
	smraw_test_tools_output/smraw_test_tools_output.vcproj \
	smraw_test_tools_signal/smraw_test_tools_signal.vcproj \
	smraw_test_write/smraw_test_write.vcproj \
	smrawmount/smrawmount.vcproj \
	smrawverify/smrawverify.vcproj \
	libsmraw.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

